# logsystem

./: compile.sh
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  logSystem.cpp  logSystem.hpp
src/unittest/: CMakeLists.txt  main.cpp
